[gd_scene load_steps=9 format=3 uid="uid://taruabjleq3q"]

[ext_resource type="Script" path="res://gamedata/sr_camera/arms/sr_armsInterface2D.gd" id="1_nqeep"]
[ext_resource type="PackedScene" uid="uid://bmrwiu105jslr" path="res://gamedata/sr_camera/arms/animation/sr_armsItemAnimation.tscn" id="2_1xkec"]

[sub_resource type="Animation" id="Animation_srb54"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ahygp"]
resource_name = "pivot_slot_selected"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(2, 0.5, 0.5),
"update": 0,
"values": [Vector2(0, 360), Vector2(0, 200), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ecxt"]
_data = {
"RESET": SubResource("Animation_srb54"),
"pivot_slot_selected": SubResource("Animation_ahygp")
}

[sub_resource type="Animation" id="Animation_k0cme"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/pivot_child:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_kfso3"]
resource_name = "idle"
length = 3.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/pivot_child:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tqghh"]
_data = {
"RESET": SubResource("Animation_k0cme"),
"idle": SubResource("Animation_kfso3")
}

[node name="sr_armsInterface2D" type="Node2D" node_paths=PackedStringArray("_debug_screen", "pivot", "animation")]
texture_filter = 1
script = ExtResource("1_nqeep")
_debug_screen = NodePath("debug")
pivot = NodePath("pivot/pivot_child")
animation = NodePath("AnimationPlayer")
default_animation_prefab = ExtResource("2_1xkec")

[node name="debug" type="ColorRect" parent="."]
process_mode = 4
custom_minimum_size = Vector2(640, 360)
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 2
color = Color(0.212202, 0.407247, 0.239938, 1)

[node name="pivot" type="Node2D" parent="."]
scale = Vector2(2.6, 2.6)

[node name="pivot_child" type="Node2D" parent="pivot"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8ecxt")
}

[node name="breath_animation" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_tqghh")
}
autoplay = "idle"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
